# projects

./: .gitignore  pyproject.toml  rag_notebook.ipynb  requirements.txt
rag-demo-bot/: indexed_docs.json  main.py  personalities.txt  refactored_main.py
rag-demo-bot/faiss_index_local/: index.pkl
rag-pdf-bot/: app.py  rag_notebook.ipynb
rag-pdf-bot/faiss_index_store/: index.faiss  index.pkl
web-search-agent/: ai_startup_report.md  main.py  workbook.ipynb
web-search-agent/.gradio/flagged/: dataset1.csv
